--- a/roles/web/templates/index.php.j2
+++ b/roles/web/templates/index.php.j2
@@ -16,7 +16,22 @@ echo  "List of Databases: </BR>";
         {% endfor %}
         $res = mysqli_query($link, "SHOW DATABASES;");
         while ($row = mysqli_fetch_assoc($res)) {
-                echo $row['Database'] . "\n";
+                ?>
+                <tr>
+                        <td>
+                        <table align="center" bgcolor="#d53333" border="0" cellpadding="0" cellspacing="0" class="white_container" style="-premailer-cellpadding:0; -premailer-cellspacing:0; border-collapse:collapse; margin:0; mso-table-lspace:0; mso-table-rspace:0; background-color: #149233; width:100%;max-width:600px;border-radius:3px 3px; -ms-border-radius:3px 3px; -webkit-border-radius:3px 3px; -moz-border-radius:3px 3px;" width="100%">
+                        <tbody>
+                        <tr>
+                           <?php
+                           echo $row['Database'] . "\n";
+                           ?>
+                        </tr>
+                        </tbody>
+                        </table>
+                        </td>
+                </tr>
+                
+                <?php
         }
 ?>
 </body>
