Update Template Jinja2

--- a/roles/web/templates/index.php.j2
+++ b/roles/web/templates/index.php.j2
@@ -1,4 +1,9 @@
-body {
+<html>
+ <head>
+  <title>Ansible Application</title>
+ </head>
+ <style>
+         body {
         font-family: 'lato', sans-serif;
       }
       .container {
@@ -78,10 +83,7 @@ body {
         }
       }
 
-<html>
- <head>
-  <title>Ansible Application</title>
- </head>
+ </style>        
  <body>
  </br>
   <a href=http://{{ inventory_hostname }}/index.html>Homepage</a>
