Updade  Jinja2 Template

--- a/roles/web/templates/index.php.j2
+++ b/roles/web/templates/index.php.j2
@@ -3,129 +3,139 @@
   <title>Ansible Application</title>
  </head>
  <style>
-                body {
-               font-family: 'lato', sans-serif;
-             }
-             .container {
-               max-width: 1000px;
-               margin-left: auto;
-               margin-right: auto;
-               padding-left: 10px;
-               padding-right: 10px;
-             }
-             
-             h2 {
-               font-size: 26px;
-               margin: 20px 0;
-               text-align: center;
-               small {
-                 font-size: 0.5em;
-               }
-             }
-             
-             .responsive-table {
-               li {
-                 border-radius: 3px;
-                 padding: 25px 30px;
-                 display: flex;
-                 justify-content: space-between;
-                 margin-bottom: 25px;
-               }
-               .table-header {
-                 background-color: #95A5A6;
-                 font-size: 14px;
-                 text-transform: uppercase;
-                 letter-spacing: 0.03em;
-               }
-               .table-row {
-                 background-color: #ffffff;
-                 box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
-               }
-               .col-1 {
-                 flex-basis: 10%;
-               }
-               .col-2 {
-                 flex-basis: 40%;
-               }
-               .col-3 {
-                 flex-basis: 25%;
-               }
-               .col-4 {
-                 flex-basis: 25%;
-               }
-               
-               @media all and (max-width: 767px) {
-                 .table-header {
-                   display: none;
-                 }
-                 .table-row{
-                   
-                 }
-                 li {
-                   display: block;
-                 }
-                 .col {
-                   
-                   flex-basis: 100%;
-                   
-                 }
-                 .col {
-                   display: flex;
-                   padding: 10px 0;
-                   &:before {
-                     color: #6C7A89;
-                     padding-right: 10px;
-                     content: attr(data-label);
-                     flex-basis: 50%;
-                     text-align: right;
-                   }
-                 }
-               }
-             }
+    body {
+   font-family: 'lato', sans-serif;
+   background-color: rgb(105, 153, 185);
+ }
+ .container {
+   max-width: 1000px;
+   margin-left: auto;
+   margin-right: auto;
+   padding-left: 10px;
+   padding-right: 10px;
+ }
+div.table-row{
+        align-content: center;
+}
+ h2 {
+   font-size: 26px;
+   margin: 20px 0;
+   text-align: center;
+   small {
+     font-size: 0.5em;
+   }
+ }
+ h4 {
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+text-align: center;
+font-size: 36px;
+ }
+ h2.table-row {
+         align-self:  center;
+ }
+ li.table-row{
+         align-content: center;
+ }
+ .responsive-table {
+   li {      
+     border-radius: 3px;
+     padding: 25px 30px;
+
+     justify-content: space-between;
+     margin-bottom: 25px;
+   }
+   .table-header {
+     background-color: #95A5A6;
+     font-size: 14px;
+     text-transform: uppercase;
+     letter-spacing: 0.03em;
+   }
+   .table-row {
+     align-content:       
+     background-color: #924fff;
+     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+   }
+   .col-1 {
+     flex-basis: 10%;
+   }
+   .col-2 {
+     flex-basis: 40%;
+   }
+   .col-3 {
+     flex-basis: 25%;
+   }
+   .col-4 {
+     flex-basis: 25%;
+   }
+   
+   @media all and (max-width: 767px) {
+     .table-header {
+       display: none;
+     }
+     .table-row{
        
+     }
+     li {
+       display: block;
+     }
+     .col {
+       
+       flex-basis: 100%;
+       
+     }
+     .col {
+       display: flex;
+       padding: 10px 0;
+       &:before {
+         color: #6C7A89;
+         padding-right: 10px;
+         content: attr(data-label);
+         flex-basis: 50%;
+         text-align: right;
+       }
+     }
+   }
+ }    
 </style>   
  <body>
  </br>
+  <h2>
   <a href=http://{{ inventory_hostname }}/index.html>Homepage</a>
+  </h2>
  </br>
 <?php 
- Print "Hello, World! I am a web server configured using Ansible and I am : ";
- echo exec('hostname');
- Print  "</BR>";
- ?>
- <?php
- <div class="container">
-                <h2>Responsive Tables Using LI <small>Triggers on 767px</small></h2>
-                <ul class="responsive-table">
-                  <li class="table-header">
-                    <div class="col col-1">Database Name</div>
-                    <div class="col col-2">Tables</div>
-                  </li>
+ Print "<h4>Hello, IT-BR Australia! I am a web server configured using Ansible and my External IP is : </h4>";
 ?>
+<h4>{{ inventory_hostname }}</h4>
 <?php
-echo  "List of Databases: </BR>";
+
+ Print "</BR>";
+ ?>
+ <div class="container" >
+                <h2>Mysql Database Overview List </h2>
+                <ul class="responsive-table">
+                  <!-- <li class="table-header">
+                    <div class="col col-1">Database Name</div>
+                  </li> -->
+ <?php
+ 
+
+
         {% for host in groups['itbr-aws-instances'] %}
                 $link = mysqli_connect('{{ hostvars[host].ansible_default_ipv4.address }}', '{{ hostvars[host].dbuser }}', '{{ hostvars[host].upassword }}') or die(mysqli_connect_error($link));
         {% endfor %}
         $res = mysqli_query($link, "SHOW DATABASES;");
         while ($row = mysqli_fetch_assoc($res)) {
                 ?>
-                        <li class="table-row">
-                                <div class="col col-1" data-label="Job Id">
-                                   <?php
-                                   echo $row['Database'] . "\n";
-                                   ?>
-                                </div>
-                                <div class="col col-2" data-label="Customer Name">
-                                            <?php
-                                            echo $row['Database'] . "\n";
-                                            ?>
-                                </div>
-                               
-                        </li>
+                <li class="table-row">                
+                  <div class="col col-1" data-label="Job Id">
+                     <?php
+                     echo $row['Database'] . "\n";
+                     ?>
+                  </div>
                 
                 <?php
-
+                echo "  </li>";
         }
 ?>
 </ul>
