Update Jinja2 Template

--- a/roles/web/templates/index.php.j2
+++ b/roles/web/templates/index.php.j2
@@ -5,7 +5,8 @@
  <style>
     body {
    font-family: 'lato', sans-serif;
-   background-color: rgb(105, 153, 185);
+   /* background-color: rgb(105, 153, 185); */
+   background-color: rgb(236, 169, 81);
  }
  .container {
    max-width: 1000px;
@@ -13,6 +14,7 @@
    margin-right: auto;
    padding-left: 10px;
    padding-right: 10px;
+   text-align: center;
  }
 div.table-row{
         align-content: center;
@@ -37,6 +39,7 @@ font-size: 36px;
          align-content: center;
  }
  .responsive-table {
+   list-style: none;      
    li {      
      border-radius: 3px;
      padding: 25px 30px;
@@ -112,7 +115,7 @@ font-size: 36px;
  Print "</BR>";
  ?>
  <div class="container" >
-                <h2>Mysql Database Overview List </h2>
+                <h2>Mysql Database List Overview  </h2>
                 <ul class="responsive-table">
                   <!-- <li class="table-header">
                     <div class="col col-1">Database Name</div>
